[tool.poetry]
name = "test_json"
version = "1"
description = "Testing json request"
authors = ["serereg <serereg@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
requests = "^2.26.0"
pylama = "^7.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
